--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ main: com.cavetale.chair.ChairPlugin
 
 name: Chair
 version: 0.1
-api-version: 1.17
+api-version: '1.20'
 
 description: Use stairs as chairs
 author: StarTux
